# pytest-filedata

./: .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
Ctl/: config.yml  requirements-test.txt  requirements.txt
facsimile/: requirements-test.txt  requirements.txt
pytest_filedata/: __init__.py
tests/: conftest.py  test_filedata.py  test_requests.py
tests/data/json/: test0.expected  test0.input
tests/data/req/test0/: data
