[tool.poetry]
name = "pytest_filedata"
repository = "git@github.com:20c/pytest-filedata.git"
version = "0.4.0"
description = "easily load data from files"
authors = [ "20C <code@20c.com>",]
license = "LICENSE.txt"
classifiers = [
  "Topic :: Software Development", 
  "License :: OSI Approved :: Apache Software License", 
  "Programming Language :: Python :: 3.6", 
  "Programming Language :: Python :: 3.7", 
  "Programming Language :: Python :: 3.8", 
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pre-commit = "^2.13.0"

[tool.poetry.dev-dependencies]
# test
pytest = ">=6.0.1"
pytest-django = ">=3.8.0"
pytest-cov = "*"
pytest-pythonpath = "*"

# lint
bandit = "^1.6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1.0.0,<2.0.0"

# ctl
ctl = "^1.0.0"
jinja2 = "^2.11.2"
tmpl = "^0.3.0"

decorator = ">=4, <5"
future = ">=0.16.0, <1"
requests-mock = ">=1, <2"


[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
